[gd_scene load_steps=25 format=3 uid="uid://cr8sagt1r4jac"]

[ext_resource type="Shader" path="res://main/setup_page/SetuoPage.gdshader" id="1_x0lee"]
[ext_resource type="Texture2D" uid="uid://dcxn78443okpl" path="res://main/setup_page/wallhaven-k7yw91.jpg" id="1_xi1m1"]
[ext_resource type="Script" path="res://main/setup_page/setup_page.gd" id="1_xuj2u"]
[ext_resource type="Texture2D" uid="uid://ca5e1fdpc20yt" path="res://main/setup_page/texture/返回.png" id="3_rvkm3"]
[ext_resource type="Texture2D" uid="uid://dkvbp6bm4t3o2" path="res://main/setup_page/texture/返回-暗.png" id="4_go2jw"]
[ext_resource type="Texture2D" uid="uid://cuaqisa43sor3" path="res://main/setup_page/texture/设置面板.png" id="5_iu6a8"]
[ext_resource type="Texture2D" uid="uid://bdijgy2rm0hr1" path="res://main/setup_page/texture/主页面.png" id="5_ug7kp"]
[ext_resource type="Texture2D" uid="uid://bn1rln43riune" path="res://main/setup_page/texture/主页面-暗.png" id="6_s0162"]
[ext_resource type="Texture2D" uid="uid://dun5lgpuh8aeg" path="res://main/setup_page/texture/滑槽.png" id="8_wmn7r"]
[ext_resource type="Texture2D" uid="uid://cuept638ysuc3" path="res://main/setup_page/texture/滑钮.png" id="9_o83qk"]
[ext_resource type="Script" path="res://main/setup_page/graphics_quality_control.gd" id="11_2g4qr"]
[ext_resource type="Texture2D" uid="uid://feopyvnl5wx6" path="res://main/setup_page/texture/领取.png" id="12_rkpif"]
[ext_resource type="Texture2D" uid="uid://codpf7auje3yy" path="res://main/main_panel/输入框.png" id="12_vyqvk"]
[ext_resource type="Texture2D" uid="uid://cbxij8ticmgjk" path="res://main/setup_page/texture/领取-暗.png" id="13_vviba"]
[ext_resource type="Texture2D" uid="uid://cici1uaonaptb" path="res://main/setup_page/texture/按钮未激活.png" id="14_olg8f"]
[ext_resource type="Texture2D" uid="uid://bu2lbgtlk03xc" path="res://main/setup_page/texture/图像.png" id="16_3pwk0"]
[ext_resource type="Texture2D" uid="uid://bmnqlmpl4vsjw" path="res://main/setup_page/texture/兑换码.png" id="17_50qih"]
[ext_resource type="Texture2D" uid="uid://cra7d103ygb1i" path="res://main/setup_page/texture/声音.png" id="18_7nipq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4kd6c"]
shader = ExtResource("1_x0lee")
shader_parameter/sigma = 4.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wka80"]

[sub_resource type="Theme" id="Theme_83qrf"]
HSlider/styles/slider = SubResource("StyleBoxEmpty_wka80")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_70njn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oivfh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6dv0h"]

[node name="SetupPage" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_xuj2u")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_xi1m1")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_4kd6c")
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[node name="BrackButtion" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 39.0
offset_right = 562.0
offset_bottom = 130.0
texture_normal = ExtResource("3_rvkm3")
texture_pressed = ExtResource("4_go2jw")

[node name="HomeButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1762.0
offset_top = 21.0
offset_right = 1885.0
offset_bottom = 145.0
texture_normal = ExtResource("5_ug7kp")
texture_pressed = ExtResource("6_s0162")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 21.0
offset_top = 173.0
offset_right = 1906.0
offset_bottom = 1060.0
texture = ExtResource("5_iu6a8")

[node name="Volume" type="Control" parent="TextureRect2"]
anchors_preset = 0
offset_left = 860.0
offset_top = 305.0
offset_right = 860.0
offset_bottom = 305.0

[node name="Progress" type="TextureRect" parent="TextureRect2/Volume"]
layout_mode = 0
offset_right = 331.0
offset_bottom = 31.0
texture = ExtResource("8_wmn7r")

[node name="HSlider" type="HSlider" parent="TextureRect2/Volume/Progress"]
layout_mode = 0
offset_left = -1.0
offset_top = -27.0
offset_right = 312.0
offset_bottom = 85.0
theme = SubResource("Theme_83qrf")
theme_override_icons/grabber = ExtResource("9_o83qk")
theme_override_icons/grabber_highlight = ExtResource("9_o83qk")
theme_override_icons/grabber_disabled = ExtResource("9_o83qk")

[node name="GraphicsQualityControl" type="Control" parent="TextureRect2"]
anchors_preset = 0
offset_left = 272.0
offset_top = 305.0
offset_right = 312.0
offset_bottom = 345.0
script = ExtResource("11_2g4qr")

[node name="Progress" type="TextureRect" parent="TextureRect2/GraphicsQualityControl"]
layout_mode = 0
offset_right = 331.0
offset_bottom = 40.0
texture = ExtResource("8_wmn7r")

[node name="HSlider" type="HSlider" parent="TextureRect2/GraphicsQualityControl"]
layout_mode = 0
offset_left = -4.0
offset_top = -26.0
offset_right = 311.0
offset_bottom = 86.0
theme = SubResource("Theme_83qrf")
theme_override_icons/grabber = ExtResource("9_o83qk")
theme_override_icons/grabber_highlight = ExtResource("9_o83qk")
theme_override_icons/grabber_disabled = ExtResource("9_o83qk")

[node name="FrameRate" type="Control" parent="TextureRect2"]
layout_mode = 3
anchors_preset = 0
offset_left = 272.0
offset_top = 476.0
offset_right = 272.0
offset_bottom = 476.0

[node name="Progress" type="TextureRect" parent="TextureRect2/FrameRate"]
layout_mode = 0
offset_right = 331.0
offset_bottom = 31.0
texture = ExtResource("8_wmn7r")

[node name="HSlider" type="HSlider" parent="TextureRect2/FrameRate"]
layout_mode = 0
offset_left = -4.0
offset_top = -30.0
offset_right = 315.0
offset_bottom = 82.0
theme = SubResource("Theme_83qrf")
theme_override_icons/grabber = ExtResource("9_o83qk")
theme_override_icons/grabber_highlight = ExtResource("9_o83qk")
theme_override_icons/grabber_disabled = ExtResource("9_o83qk")

[node name="SoundEffect" type="Control" parent="TextureRect2"]
layout_mode = 3
anchors_preset = 0
offset_left = 860.0
offset_top = 476.0
offset_right = 860.0
offset_bottom = 476.0

[node name="Progress" type="TextureRect" parent="TextureRect2/SoundEffect"]
layout_mode = 0
offset_right = 331.0
offset_bottom = 31.0
texture = ExtResource("8_wmn7r")

[node name="HSlider" type="HSlider" parent="TextureRect2/SoundEffect"]
layout_mode = 0
offset_left = -2.0
offset_top = -29.0
offset_right = 316.0
offset_bottom = 83.0
theme = SubResource("Theme_83qrf")
theme_override_icons/grabber = ExtResource("9_o83qk")
theme_override_icons/grabber_highlight = ExtResource("9_o83qk")
theme_override_icons/grabber_disabled = ExtResource("9_o83qk")

[node name="TextureRect" type="TextureRect" parent="TextureRect2"]
layout_mode = 0
offset_left = 1286.0
offset_top = 435.0
offset_right = 1785.0
offset_bottom = 517.0
texture = ExtResource("12_vyqvk")

[node name="RedeemCode" type="LineEdit" parent="TextureRect2"]
layout_mode = 0
offset_left = 1298.0
offset_top = 448.0
offset_right = 1773.0
offset_bottom = 510.0
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_colors/font_uneditable_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_70njn")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_oivfh")
theme_override_styles/normal = SubResource("StyleBoxEmpty_6dv0h")
caret_blink = true
caret_force_displayed = true
caret_mid_grapheme = true

[node name="TextureButton" type="TextureButton" parent="TextureRect2"]
layout_mode = 0
offset_left = 1402.0
offset_top = 593.0
offset_right = 1663.0
offset_bottom = 674.0
texture_normal = ExtResource("12_rkpif")
texture_pressed = ExtResource("13_vviba")

[node name="VoiceStatus" type="TextureButton" parent="TextureRect2"]
layout_mode = 0
offset_left = 981.0
offset_top = 607.0
offset_right = 1115.0
offset_bottom = 741.0
texture_normal = ExtResource("14_olg8f")

[node name="AntiAliasingStatus" type="TextureButton" parent="TextureRect2"]
layout_mode = 0
offset_left = 388.0
offset_top = 607.0
offset_right = 522.0
offset_bottom = 741.0
texture_normal = ExtResource("14_olg8f")

[node name="T3" type="TextureRect" parent="TextureRect2"]
offset_left = 148.0
offset_top = 28.0
offset_right = 544.0
offset_bottom = 145.0
texture = ExtResource("16_3pwk0")

[node name="T1" type="TextureRect" parent="TextureRect2"]
layout_mode = 0
offset_left = 1345.0
offset_top = 28.0
offset_right = 1741.0
offset_bottom = 145.0
texture = ExtResource("17_50qih")

[node name="T2" type="TextureRect" parent="TextureRect2"]
offset_left = 752.0
offset_top = 28.0
offset_right = 1148.0
offset_bottom = 145.0
texture = ExtResource("18_7nipq")

[connection signal="pressed" from="HomeButton" to="." method="_on_home_button_pressed"]
[connection signal="pressed" from="TextureRect2/VoiceStatus" to="." method="_on_voice_status_pressed"]
[connection signal="pressed" from="TextureRect2/AntiAliasingStatus" to="." method="_on_anti_aliasing_status_pressed"]
